# connector

./: .editorconfig  .env.template  .gitignore  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
connector/: __init__.py  executor.py
docs/: generator.py
docs/json/: function.json  indicator.json
docs/md/: function.md  indicator.md
utils/: Dartfss.py  __init__.py  evaluator.py  executor.py  function.py  generator.py  indicator.py  parameter.py  reader.py  stockstat.py  telegram.py  tools.py
