[tool.poetry]
name = "utils"
version = "3.4.0"
description = "Alpha trading utils with pandas"
authors = ["yangroro <yang@heechan.kr>"]
license = "MIT"
packages = [
    { include = "utils" },
]
readme = "README.md"

repository = "https://github.com/alpha-trading/utils"
homepage = "https://github.com/alpha-trading/utils"

[tool.poetry.dependencies]
python = "^3.7"
pymysql = "^0.9.0"
python-dotenv = "^0.14.0"
pandas = "^1.1.0"
python-telegram-bot = "^12.8"
[tool.poetry.dev-dependencies]
dephell = "^0.8.3"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
