[tool.poetry]
name = "utils"
version = "3.9.0"
description = "Alpha trading utils with pandas"
authors = ["yangroro <yang@heechan.kr>"]
license = "MIT"
packages = [
    { include = "utils" },
]
readme = "README.md"

repository = "https://github.com/alpha-trading/utils"
homepage = "https://github.com/alpha-trading/utils"

[tool.poetry.dependencies]
python = "^3.7"
pymysql = "^0.9.0"
python-dotenv = "^0.14.0"
pandas = "^1.1.0"
python-telegram-bot = "^12.8"
pypika = "^0.47.0"
[tool.poetry.dev-dependencies]
dephell = "^0.8.3"

[tool.black]
line-length = 119
target-version = ['py37']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | setup.py
)
'''

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
