[tool.poetry]
name = "utils"
version = "4.4.0"
description = "Alpha trading utils with pandas"
authors = ["yangroro <yang@heechan.kr>"]
license = "MIT"
packages = [
    { include = "utils" },
]
readme = "README.md"

repository = "https://github.com/alpha-trading/utils"
homepage = "https://github.com/alpha-trading/utils"

[tool.poetry.dependencies]
python = "^3.7.9"
pymysql = "^1.0.2"
python-dotenv = "^0.15.0"
python-telegram-bot = "^12.8"
pypika = "^0.47.0"
pandas = "^1.2.3"
scikit-learn = "^0.24.1"

[tool.poetry.dev-dependencies]
dephell = "^0.8.3"
docstring-parser = "^0.7.3"

[tool.black]
line-length = 119
target-version = ['py37']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | setup.py
)
'''

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
